fix z-index issue

--- a/src/components/Contact/ContactBubbleChat/index.scss
+++ b/src/components/Contact/ContactBubbleChat/index.scss
@@ -6,6 +6,7 @@
   border-radius: 30px;
   width: 80vw;
   height: 70vh;
+  margin-bottom: 10vw;
   overflow: hidden;
   @extend %has-shadow;
   display: flex;
@@ -13,6 +14,8 @@
 
   opacity: 0;
   transform: translateX(80vw);
+  z-index: -1;
+  position: relative;
   transition: all 1s ease;
 
   @media (min-width: $breakpoint-lg) {
@@ -22,6 +25,7 @@
   &.active {
     opacity: 1;
     transform: translateX(0);
+    z-index: 100;
     transition: all 1s ease;
   }
 
